@@ -1,3 +1,9 @@
 
-SUBDIRS = aes zlib
+if ENABLE_AES
+SUBDIRS = aes
+else
+SUBDIRS = 
+endif
+
+SUBDIRS += zlib
 
