@@ -85,6 +85,22 @@ if test $ac_enable_internal = yes; then
 fi
 
 dnl
+dnl check for --disable-aes
+dnl
+AC_MSG_CHECKING(--disable-aes argument)
+AC_ARG_ENABLE(aes,
+    [  --disable-aes           Don't support AES encryption (ham_enable_encryption).], ,
+    [enable_aes="yes"])
+
+if test "$enable_aes" = "yes"; then
+    AC_MSG_RESULT(no)
+else
+    CFLAGS="${CFLAGS} -DHAM_DISABLE_AES"
+    AC_MSG_RESULT(yes)
+fi
+AM_CONDITIONAL(ENABLE_AES, test "x$enable_aes" = "xyes")
+
+dnl
 dnl use -O3 on platforms with gcc, or -Os if we optimize for size, or 
 dnl no optimization if debugging is enabled; also, force -Wall
 dnl
