@@ -983,6 +983,7 @@ ham_set_prefix_compare_func(ham_db_t *db, ham_prefix_compare_func_t foo);
 HAM_EXPORT ham_status_t
 ham_set_compare_func(ham_db_t *db, ham_compare_func_t foo);
 
+#if HAM_ENABLE_AES
 /**
  * Enable AES encryption.
  *
@@ -1009,6 +1010,7 @@ ham_set_compare_func(ham_db_t *db, ham_compare_func_t foo);
  */
 HAM_EXPORT ham_status_t
 ham_enable_encryption(ham_db_t *db, ham_u8_t key[16], ham_u32_t flags);
+#endif /* HAM_ENABLE_AES */
 
 /**
  * Searches an item in the database.
