@@ -6,6 +6,9 @@ lib_LTLIBRARIES = libhamsterdb.la
 libhamsterdb_la_SOURCES = blob.c btree.c btree_check.c btree_enum.c btree_erase.c btree_find.c btree_insert.c cache.c db.c error.c extkeys.c freelist.c hamsterdb.c keys.c mem.c os_posix.c page.c txn.c util.c btree_cursor.c device.c
 
 libhamsterdb_la_LDFLAGS = -version-info 0:0:0 \
-	$(top_builddir)/3rdparty/aes/libaes.la \
 	$(top_builddir)/3rdparty/zlib/libzlib.la
+
+if ENABLE_AES
+libhamsterdb_la_LDFLAGS += $(top_builddir)/3rdparty/aes/libaes.la
+endif
 
